mdifiying and some updating to my app
